# wall_backend

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  report_stage_1-2.md
libs/: README.md  config_loader.py
libs/ai/: README.md  embedding_factory.py  embeddings.py  text_hashing.py  text_normalization.py
libs/ai/providers/: minilm.py  stub.py
libs/fastapi/: README.md  app_factory.py  dependencies.py  exception_handlers.py
libs/logging/: README.md  logger.py
libs/postgres/: README.md  base.py  schema.py  session.py
libs/qdrant/: README.md  client.py
migrations/: README.md  env.py
migrations/versions/: README.md
services/: README.md
services/auth_service/: README.md  main.py
services/auth_service/api/: README.md  router.py  schemas.py
services/auth_service/application/: README.md  login.py  logout.py  register.py
services/auth_service/domain/: README.md  token.py  user.py
services/auth_service/infrastructure/: README.md
services/message_service/: README.md  config.json  main.py
services/message_service/api/: README.md  router.py  schemas.py
services/search_service/: README.md  config.json  main.py
tests/: conftest.py  test_message_search_integration.py
tests/domain/: test_moderation.py
tests/libs/: test_config_loader.py  test_qdrant_client.py
tests/moderation/: test_moderation_ban_words.py  test_normalization.py  test_pii.py  test_pipeline.py  test_step_registry.py
tests/search/: test_classic_search.py  test_message_search_repo.py  test_search_request.py  test_search_response.py  test_search_result.py
(+75 files in other folders)
