[project]
name = "wall-backend"
version = "0.1.0"
description = "Backend services for The Wall"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.34,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "greenlet>=3.1,<3.2",
    "asyncpg>=0.30,<1.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.28,<1.0",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-asyncio = ">=0.25,<1.0"
